...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ServiceEditor">

    <Spinner
        android:id="@+id/srServiceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <Button
        android:textStyle="bold"
        android:id="@+id/bAddService"
        android:text="Add Service"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textStyle="bold"
        android:id="@+id/bViewServices"
        android:text="View Services"
        android:layout_margin="5dp"
        android:background="#0288D1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<!--    <TextView
...
