<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pageHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Health Card Form and Documentation Page"
            android:textSize="21dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/formHeader"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Form info: "
            android:textSize="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your first name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your last name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your address"
            android:inputType="textPostalAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your birthday (yyyy/mm/dd)"
            android:inputType="date" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/documentHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Document Info: "
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/residencePick"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="Upload proof of residency" />

            <Button
                android:id="@+id/statusPick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload proof of status" />
        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="submitClick"
            android:text="Submit" />


    </LinearLayout>

</RelativeLayout>